# advent_of_code

./: .gitignore  LICENSE  flake.nix  solve.sh
2022/1/: solve.exs
2022/2/: solve.exs
2022/3/: solve.exs
2023/: package-lock.json  package.json
2023/1/: 1.py
2023/src/: Helpers.elm  Two.elm
2023/tests/: TwoTest.elm
2024/: .gitignore  README.md  aoc_2024.opam  dune-project  flake.nix
2024/lib/: dune  io.ml
2024/lib/day1/: main.ml
2024/lib/day2/: main.ml
2024/lib/day3/: main.ml
2024/lib/day4/: main.ml
2024/stash/day3parser/: ast.ml  dune  lexer.mll  main.ml  parser.mly
